@@ -1189,14 +1189,16 @@
 
 \usepackage{pgfmanual}
 
-%\iffalse
-\iftrue
+\makeatletter
+% \pgfautoxrefs will be defined by 'make dist'
+\pgfutil@ifundefined{pgfautoxrefs}{%
 	\def\pgfmanualpdflabel#1#2{#2}% NO-OP FIXME
 	\def\pgfmanualpdfref#1#2{#2}%
 	\pgfkeys{
 		/pdflinks/codeexample links=false,% DISABLED.
 	}%
-\fi
+}{}
+\makeatother
 
 %%% Local Variables: 
 %%% mode: latex
