@@ -5,6 +5,16 @@ TEXINPUTS := ../../text-en:$(TEXINPUTS)
 
 all: $(doc).pdf
 
+# make dist will also enable automatic cross references in codeexamples.
+# This is disabled by default as it requires higher mem limits.
+#
+# It employs a 'texmf.cnf' which lies in ../../text-en.
+dist: FORCE
+	export TEXMFCNF="../../text-en:$(TEXMFCNF)"; \
+	export TEXINPUTS="$(TEXINPUTS)"; \
+	$(latex) '\def\pgfautoxrefs{1}\input{$(doc)}'
+	@echo "$(doc).pdf remade with auto-xref support. Check if auto-xrefs work and rerun make dist if not."
+
 pgfmanual.idx: 
 	touch pgfmanual.idx
 
@@ -14,6 +24,9 @@ pgfmanual.ind: pgfmanual.idx
 pgfmanual.pdf: $(doc).tex $(doc).ind 
 	TEXINPUTS="$(TEXINPUTS)" $(latex) $(doc).tex
 	(egrep -q $(rerun) $(doc).log && TEXINPUTS="$(TEXINPUTS)" $(latex) $(doc).tex) || true
+	@echo "Use 'make dist' to generate auto-xrefs."
+
+FORCE:
 
 clean:
 	rm -f pgfmanual*.aux pgfmanual.{out,log,idx,ind,ilg,pdf,toc,bbl,blg}
